Removing solarized color hybrid adding inital line number to banner

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 <div class="row">
-  <div class="center-align col s10 offset-s1 zenburn-text rounded-borders">
+  <div class="center-align col s10 offset-s1 rounded-borders">
     <h3>It's broke! The page specified cannot be found. Click <br><a href="/">Home</a><br> to return to the homepage.</h3>
   </div>
 </div>
