--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 
 <div class="row">
-  <div class="col s10 offset-s1 zenburn-text rounded-borders">
+  <div class="col s10 offset-s1 rounded-borders">
     <h5 class="center-align">Post Types:</h5>
     <div class="postTypeBtnList center-align">
       {{ range .Site.Pages.GroupBy "Section" }}
@@ -14,7 +14,7 @@
 </div>
 
 <div class="row">
-  <div class="col s10 offset-s1 zenburn-text rounded-borders">
+  <div class="col s10 offset-s1 rounded-borders">
     <h5 class="center-align">Recent Posts:</h5>
     <ul>
       {{ range first 10 .Site.Pages }}
