Updated styling and migrated to more configuration
Moved the css and js links to default data files to allow for overwritting and easy updating
Updated the styling of the pages to provide someting more readable

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
     <ul>
       {{ range first 10 .Site.Pages }}
         {{ if ne .Type "page" }}
-          <li>{{ .Date.Format "Monday, July 7, 2006" }} : <a href="{{ .Permalink }}">{{ .Title }}</a></li>
+          <li>{{ .Date.Local }} : <a href="{{ .Permalink }}">{{ .Title }}</a></li>
         {{ end }}
       {{ end }}
     </ul>
