--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,7 +1,7 @@
 <div>
   <div class="zenburn-text bannerHeader valign-wrapper">
     <div class="center-block valign">
-      <h5 class="banner-line-number">1</h5>
+      <!-- <h5 class="banner-line-number">1</h5> -->
       <h4 class="banner-title">{{ .Site.Params.bannerText }}<span class="cursor">&nbsp;</span></h4>
     </div>
   </div>
