--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,10 @@
 {{ partial "header.html" . }}
 <div class="row">
+  <div class="col s10 offset-s1 center">
+    <h5>{{ .Title }}</h5>
+  </div>
+</div>
+<div class="row">
   <div class="col s10 offset-s1 rounded-borders">
     {{ .Content }}
   </div>
