--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,17 @@
 
-  </div>
-  <footer class="container center-align">
-      {{ partial "footerMessage.html" . }}
-  </footer>
+    </div>
+    <footer class="container center-align">
+        <hr/>
+        {{ partial "footerMessage.html" . }}
+    </footer>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-  <script src="https://use.fontawesome.com/004458b59f.js"></script>
-  <script type="text/javascript">
-      $(document).ready(function() {
-        $('.dropdown-button').dropdown()
-      })
-  </script>
+    <script type="text/javascript" src="{{ .Site.Params.jquery.js | default .Site.Data.default.jquery.js }}"></script>
+    <script src="{{ .Site.Params.materialize.js | default .Site.Data.default.materialize.js }}"></script>
+    <script src="{{ .Site.Params.fontawesome.js | default .Site.Data.default.fontawesome.js }}"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+          $('.dropdown-button').dropdown()
+        })
+    </script>
   </body>
 </html>
