--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,62 +1,55 @@
-<div>
+<header>
   <div class="zenburn-text bannerHeader valign-wrapper">
+    <div class="hide-on-large-only menu-item">
+      <a class="dropdown-button" href="#!" data-beloworigin="true" data-activates="dropdownOptions"><i class="material-icons white-icon">list</i></a>
+    </div>
     <div class="center-block valign">
-      <!-- <h5 class="banner-line-number">1</h5> -->
       <h4 class="banner-title">{{ .Site.Params.bannerText }}<span class="cursor">&nbsp;</span></h4>
     </div>
   </div>
   <ul id="dropdownOptions" class="dropdown-content">
-    {{ with .Site.Params.home }}
-        <li><a href="{{ .Site.BaseURL }}">{{ .text }}</a></li>
-        <li class="divider"></li>
-    {{ end }}
-
-    {{ with .Site.Params.github }}
+    {{ with .Site.Params }}
+      {{ range .navbar }}
         <li><a href="{{ .link }}">{{ .text }}</a></li>
-        <li class="divider"></li>
-    {{ end }}
-
-    {{ with .Site.Params.resume }}
-        <li><a href="{{ .link }}">{{ .text }}</a></li>
-        <li class="divider"></li>
-    {{ end }}
-
-    {{ with .Site.Params.blog }}
-        <li><a href="{{ .link }}">{{ .text }}</a></li>
-        <li class="divider"></li>
-    {{ end }}
-
-    {{ with .Site.Params.about }}
-        <li><a href="{{ .link }}">{{ .text }}</a></li>
+      {{ end }}
     {{ end }}
   </ul>
 
-  <nav>
-    <div class="nav-wrapper grey-text text-lighten-4 green-primary-dark">
-      <a href="{{ .Site.BaseURL }}" class="brand-logo left-pad-1">{{ .Site.Params.title }}</a>
-      <ul class="right">
-        {{ with .Site.Params.home }}
-            <li class="hide-on-med-and-down tooltipped" data-position="left" data-delay="50" data-tooltip="{{ .tooltip }}"><a href="{{ $.Site.BaseURL }}"><i class="material-icons fa {{ .icon }}"></i></a></li>
-        {{ end }}
+  <div>
+    <ul class="side-nav sidenav fixed">
+      <li>
+        <a href="{{ .Site.BaseURL }}">{{ .Site.Params.title }}</a>
+      </li>
 
-        {{ with .Site.Params.github }}
-            <li class="hide-on-med-and-down tooltipped" data-position="left" data-delay="50" data-tooltip="{{ .tooltip }}"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i></a></li>
+      {{ with .Site.Params }}
+        {{ range .navbar }}
+          {{ if isset . "tooltip" }}
+            <li class="hide-on-med-and-down tooltipped" data-position="right" data-delay="50" data-tooltip="{{ .tooltip }}"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i>{{ .text }}</a></li>
+          {{ else }}
+            <li class="hide-on-med-and-down"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i>{{ .text }}</a></li>
+          {{ end }}
         {{ end }}
+      {{ end }}
+    </ul>
+  </div>
 
-        {{ with .Site.Params.resume }}
-            <li class="hide-on-med-and-down tooltipped" data-position="left" data-delay="50" data-tooltip="{{ .tooltip }}"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i></a></li>
+  <!-- <nav>
+    <div class="nav-wrapper">
+      <ul class="side-nav sidenav fixed">
+        <li>
+          <a href="{{ .Site.BaseURL }}">{{ .Site.Params.title }}</a>
+        </li>
+
+        {{ with .Site.Params }}
+          {{ range .navbar }}
+            {{ if isset . "tooltip" }}
+              <li class="hide-on-med-and-down tooltipped" data-position="right" data-delay="50" data-tooltip="{{ .tooltip }}"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i>{{ .text }}</a></li>
+            {{ else }}
+              <li class="hide-on-med-and-down"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i>{{ .text }}</a></li>
+            {{ end }}
+          {{ end }}
         {{ end }}
-
-        {{ with .Site.Params.blog}}
-            <li class="hide-on-med-and-down tooltipped" data-position="left" data-delay="50" data-tooltip="{{ .tooltip }}"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i></a></li>
-        {{ end }}
-
-        {{ with .Site.Params.about}}
-            <li class="hide-on-med-and-down tooltipped" data-position="left" data-delay="50" data-tooltip="{{ .tooltip }}"><a href="{{ .link }}"><i class="material-icons fa {{ .icon }}"></i></a></li>
-        {{ end }}
-
-        <li class="hide-on-large-only"><a class="dropdown-button" href="#!" data-beloworigin="true" data-activates="dropdownOptions"><i class="material-icons">list</i></a></li>
       </ul>
     </div>
-  </nav>
-</div>
+  </nav> -->
+</header>
