--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,9 +10,7 @@
     <script src="{{ .Site.Params.materialize.js | default .Site.Data.default.materialize.js }}"></script>
     <script src="{{ .Site.Params.fontawesome.js | default .Site.Data.default.fontawesome.js }}"></script>
     <script type="text/javascript">
-        // $(document).ready(function() {
-        //   $('.dropdown-button').dropdown()
-        // })
+        $(".sidebar-button").sideNav();
     </script>
   </body>
 </html>
