--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="zenburn-text bannerHeader valign-wrapper">
+  <div class="zenburn-text bannerHeader valign-wrapper z-depth-3">
     <div class="hide-on-large-only menu-item">
       <a class="sidebar-button" href="#!" data-beloworigin="true" data-activates="slide-out"><i class="material-icons white-icon">list</i></a>
     </div>
