--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+<div class="post-list-item-empty"></div>
 <div class="row">
   <div class="col s10 offset-s1 center">
     <h5>{{ .Title }}</h5>
