--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,8 @@
 {{ partial "header.html" . }}
 
-<div class="row">
+<!-- <div class="row">
   <div class="col s10 offset-s1 rounded-borders">
-    <h5 class="center-align">Post Types:</h5>
+    <h5 class="center-align">Tags:</h5>
     <div class="postTypeBtnList center-align">
       {{ range .Site.Pages.GroupBy "Section" }}
         {{ if ne .Key "" }}
@@ -11,18 +11,22 @@
       {{ end }}
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="row">
-  <div class="col s10 offset-s1 rounded-borders">
-    <h5 class="center-align">Recent Posts:</h5>
-    <ul>
-      {{ range first 10 .Site.Pages }}
-        {{ if ne .Type "page" }}
-          <li>{{ .Date.Local }} : <a href="{{ .Permalink }}">{{ .Title }}</a></li>
-        {{ end }}
+  <div class="col s8 offset-s1">
+    {{ range first 10 .Site.Pages }}
+      {{ if and (.IsPage) (not .Params.direct_link) }}
+        <div class="post-list-item-empty"></div>
+        <div class="post-list-item">
+          <h5>{{ .Title }}</h5>
+          <p>{{ .Summary }}</p>
+        </div>
+        <div style="text-align: right">
+          <a href="{{ .Permalink }}">READ MORE...</a>
+        </div>
       {{ end }}
-    </ul>
+    {{ end }}
   </div>
 </div>
 
