--- a/static/css/codemonkey.css
+++ b/static/css/codemonkey.css
@@ -19,6 +19,15 @@ html, body {
   position: relative;
 }
 
+.post-list-item {
+  padding-top: 0.01em;
+  padding-bottom: 0.01em;
+}
+
+.post-list-item-empty {
+  min-height: 52px;
+}
+
 .menu-item {
   top: 10px;
   left: 10px;
