--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,28 +12,6 @@
         </div>
       {{ end }}
 
-      <div class="row">
-        <ul class="pagination">
-          {{ if $paginator.HasPrev }}
-            <li><a href="{{ $paginator.Prev.URL }}"><i class="material-icons">chevron_left</i></a></li>
-          {{ else }}
-            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-          {{ end }}
-
-          {{ range $paginator.Pagers }}
-            {{ if eq $paginator.PageNumber .PageNumber }}
-              <li class="active"><a href="{{ .URL }}">{{ .PageNumber }}</a></li>
-            {{ else }}
-              <li><a href="{{ .URL }}">{{ .PageNumber }}</a></li>
-            {{ end }}
-          {{ end }}
-
-          {{ if $paginator.HasNext }}
-            <li><a href="{{ $paginator.Next.URL }}"><i class="material-icons">chevron_right</i></a></li>
-          {{ else }}
-            <li class="disabled"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-          {{ end }}
-        </ul>
-      </div>
+      {{ partial "list/paginator.html" (dict "paginator" $paginator "currentPageNumber" .Paginator.PageNumber) }}
   </section>
 {{ partial "footer.html" . }}
